k8s/infra/base/gateway/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-redirect-http-to-https
  labels:
    app.kubernetes.io/part-of: streamforge-infra
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: streamforge-gateway
      sectionName: http-listener
  hostnames:
    - "sudheer.fun"
    - "*.sudheer.fun"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
